--- a/css/layout.css
+++ b/css/layout.css
@@ -24,7 +24,7 @@ header {
     background: #13a8dd -moz-linear-gradient(top,rgba(0, 18, 228, 0.2) 0%,rgba(0, 37, 171, 0.61)100%);
     background: #13a8dd -webkit-gradient(linear,left top,left bottom,color-stop(0%,rgba(255,255,255,.2)),color-stop(100%,rgba(0,0,0,.2)));
     background: #13a8dd -webkit-linear-gradient(top,rgba(0, 18, 228, 0.2) 0%,rgba(0, 37, 171, 0.61) 100%);
-    position: fixed;
+    position: relative;
     z-index: 99999;
     width: 100%;
     border-bottom: 6px solid #faa801;
@@ -456,10 +456,6 @@ div.heading-text {
 }
 
 /*============================== HOME TUJUAN ====================================*/
-/*
-.tujuan-maincontainer {
-    margin-top: 30px;
-}*/
 
 /*==============================  NEWS ====================================*/
 
