--- a/css/theme/sass/layout.scss
+++ b/css/theme/sass/layout.scss
@@ -21,9 +21,7 @@ header {
   top: 0;
   left: 0;
   background: #13a8dd -moz-linear-gradient(top, rgba(0, 18, 228, 0.2) 0%, rgba(0, 37, 171, 0.61) 100%);
-  /* FF3.6+*/
   background: #13a8dd -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0.2)), color-stop(100%, rgba(0, 0, 0, 0.2)));
-  /* Chrome,Safari4+*/
   background: #13a8dd -webkit-linear-gradient(top, rgba(0, 18, 228, 0.2) 0%, rgba(0, 37, 171, 0.61) 100%);
 }
 
@@ -55,12 +53,8 @@ header {
 }
 
 #logo {
-  /*background-color:#fff;*/
-  /*box-shadow:0 1px 3px rgba(0,0,0,.3);
-  -moz-box-shadow:0 1px 3px rgba(0,0,0,.3); text-align:center;
-  -webkit-box-shadow:0 1px 3px rgba(0,0,0,.3);*/
   a {
-    background: url(img/Al-Rahma.png) no-repeat 0 0;
+    background: url(../../../img/Al-Rahma.png) no-repeat 0 0;
     display: inline-block;
     height: 29px;
     margin: 11px auto;
@@ -98,7 +92,7 @@ ul {
       }
     }
     li {
-      background: url(../img/menu_footer_divider.png) right center no-repeat;
+      background: url(../../../img/menu_footer_divider.png) right center no-repeat;
       float: left;
       margin-left: 10px;
       padding-right: 10px;
@@ -122,8 +116,6 @@ ul {
 
 /* #Site Footer
 ================================================ */
-
-/*footer{ background:#731d34 url(../img/bg_footer.png) repeat-x left top; color:#d1d1d1; padding:20px 0 10px 0; width:100%;}*/
 
 footer {
   color: #000;
@@ -256,7 +248,6 @@ ul#nav-footer li {
   cursor: pointer;
   width: 100px;
   height: 100px;
-  /* background: url(../img/pw_pattern.png);*/
 }
 
 #contact .map .box_wrapp {
@@ -279,7 +270,6 @@ span.required {
 }
 
 /* ============= STYLE ABOUT US ================== */
-
 .menus-main {
   width: 100%;
   display: inline-block;
@@ -1071,7 +1061,7 @@ img.career-viewstyle {
 #balikkeatas {
   cursor: pointer;
   position: fixed;
-  background: url(img/arrows.png) no-repeat;
+  background: url(../../../img/arrows.png) no-repeat;
   left: 97%;
   bottom: 10px;
   color: #ffffff;
@@ -1231,18 +1221,18 @@ img.career-viewstyle {
 }
 
 .box-circletujuanalquran > span.icon-alquran {
-  background: url(../img/ico-alquran.png) no-repeat;
+  background: url(../../../img/ico-alquran.png) no-repeat;
   z-index: 999;
 }
 
 .box-circletujuanmind > span.icon-mind {
-  background: url(../img/ico-mind.png) no-repeat;
+  background: url(../../../img/ico-mind.png) no-repeat;
   z-index: 999;
   margin: -3px 4px;
 }
 
 .box-circletujuangrup > span.icon-grup {
-  background: url(../img/ico-grup.png) no-repeat;
+  background: url(../../../img/ico-grup.png) no-repeat;
   z-index: 999;
 }
 
@@ -1279,4 +1269,354 @@ img.career-viewstyle {
     word-spacing: -1px;
     font-size: 13.5px;
   }
+}
+
+/*----------------------------------
+        RESPONSIVE UTILS
+------------------------------------*/
+      
+/* reset all media from width 1200 to 970px */
+@media (min-width: 1200px) {
+  .container {
+    width: 970px !important;
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 375px) {
+  /*media content all 320px*/
+  .content-alrahma {
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+  }
+  /*======= home responsive alrahma ====*/
+  .outer-containertopbase {
+    margin: 0 auto !important;
+  }
+  .wrapper-containertopbase {
+    width: 100%;
+    height: 277px !important;
+    position: relative;
+  }
+  .main-innerboxt-tujuanalrahma {
+    margin-bottom: 75px !important;
+  }
+}
+
+@media only screen and (width: 375px) {
+  /*media content all 320px*/
+  .content-alrahma {
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+  }
+  .press-rows-alrahma {
+    padding-right: 30px !important;
+    padding-left: 30px !important;
+  }
+  /*======= home responsive alrahma ====*/
+  .outer-containertopbase {
+    margin: 0 auto !important;
+  }
+  .wrapper-containertopbase {
+    width: 100%;
+    height: 277px !important;
+    position: relative;
+  }
+  .main-innerboxt-tujuanalrahma {
+    margin-bottom: 75px !important;
+  }
+}
+
+@media only screen and (width: 425px) {
+  /*media content all 320px*/
+  .content-alrahma {
+    padding-right: 15px !important;
+    padding-left: 15px !important;
+  }
+  .press-rows-alrahma {
+    padding-right: 46px !important;
+    padding-left: 46px !important;
+  }
+  /*======= home responsive alrahma ====*/
+  .outer-containertopbase {
+    margin: 0 auto !important;
+  }
+  .wrapper-containertopbase {
+    width: 100%;
+    height: 277px !important;
+    position: relative;
+  }
+  .main-innerboxt-tujuanalrahma {
+    margin-bottom: 75px !important;
+  }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 768px) {
+  /*Header Reset postion to static in media 320px*/
+  h2, h3 {
+    font-size: 22px !important;
+  }
+  /*============= alert notificaton ===========*/
+  .error {
+    font-size: 12px !important;
+  }
+  /*============== logo nav brand ============*/
+  .navbar > {
+    .container .navbar-brand, .container-fluid .navbar-brand {
+      display: inline-block;
+      position: absolute !important;
+      top: 1px;
+    }
+  }
+  .navbar-nav {
+    text-transform: uppercase;
+    font-size: 12px;
+  }
+  .navbar-default {
+    .navbar-collapse, .navbar-form {
+      border-color: transparent !important;
+    }
+    .navbar-toggle {
+      &:hover, &:focus {
+        background: #faa801;
+      }
+    }
+  }
+  /*============== toogle menus ============ */
+  .navbar-nav li a {
+    border-bottom: 1px solid #8e8e8e !important;
+  }
+  /*========== end toogle ==========*/
+  .wrapperbox-tujuanalrahma {
+    margin: 10 0 auto !important;
+    > .col-md-4 > .main-innerboxt-tujuanalrahma {
+      margin-bottom: 50px !important;
+    }
+  }
+  .heading-responsive h2 {
+    font-size: 22px !important;
+  }
+  .wrapperbox-tujuanalrahma > .main-innerboxt-tujuanalrahma {
+    > .content-tujuan {
+      font-size: 15px;
+      text-align: center;
+      margin: 0 auto;
+      padding: 0;
+      width: 200px;
+      height: 100px;
+      color: rgba(86, 86, 86, 0.86);
+      line-height: 19px;
+      word-spacing: 1px;
+    }
+    margin: 55px auto !important;
+    float: none !important;
+  }
+  /*========= event ======*/
+  .event-maincontainer, .main-konsultasi {}
+  .event-maincontainer > .article-container {
+    margin-top: 100px !important;
+  }
+  .wraperouter-event {
+    margin-bottom: 10px !important;
+  }
+  .article-mainevent {
+    margin-left: 10px;
+    margin-right: 10px;
+    font-size: 13px;
+    line-height: 23px;
+  }
+  .rules-consultation-image {
+    display: none;
+  }
+  li.nav-li-event {
+    width: auto !important;
+  }
+  img.event-imglistener, .img-responsive {
+    display: block;
+    width: 100% !important;
+    max-width: 100% !important;
+    height: 100% !important;
+    max-height: 100% !important;
+  }
+  .container-threeleft {
+    margin-left: 10px;
+    margin-right: 10px;
+    img.resize-imgevent {
+      width: 100px !important;
+      height: 100px !important;
+      display: block;
+      float: left;
+      margin-right: 27px;
+      border-radius: 160px;
+      box-shadow: rgba(72, 72, 72, 0.28) 6px 4px 12px;
+      border: 4px solid #fff !important;
+    }
+  }
+  .main-konsultasi {
+    margin-top: 50px !important;
+    > .heading-eventresponsive h2 {
+      font-size: 22px !important;
+    }
+  }
+  .consul > .answer {
+    width: 100% !important;
+  }
+  #balikkeatas {
+    left: 85% !important;
+    z-index: 99999;
+  }
+  .wrapper-gallerys h2 {
+    font-size: 22px !important;
+  }
+  div.heading-text {
+    width: auto !important;
+  }
+  /*========= SLIDER EVENT TESTIMONIALS ===========*/
+  #event-testimonials .owl-wrapper-outer {}
+  .shadow-effect > img.resize-imgevent {
+    float: none !important;
+    margin: 0 auto !important;
+    position: relative !important;
+    top: 1px !important;
+  }
+  /*================ gallery  ==============*/
+  .container > .wrapper-outerspaces > {
+    .wrapper-gallerys {
+      margin-bottom: 10px !important;
+    }
+    .nav-ul-breadcumb > .nav-li-breadcumb {
+      font-size: 12px !important;
+    }
+  }
+  .wrapper-outerspaces > .container-gallery > .nav-ul-breadcumb > .nav-li-breadcumb > .box-gallery {
+    width: 300px !important;
+    margin-top: 10px !important;
+  }
+  .box-gallery {
+    margin: 19px auto !important;
+    padding: 11px !important;
+    float: none !important;
+  }
+  img.sizing-gallery, .img-responsive {
+    display: block;
+    width: 100% !important;
+    max-width: 100% !important;
+    height: auto !important;
+  }
+  /*============ end of gallery  =============*/
+  /*=================== news =====================*/
+  .box-outerheading-news > .heading-newsarticle {
+    margin: 0 auto !important;
+    padding: 14px 3px !important;
+  }
+  /*content form search top*/
+  .content-news .main-formsearch-news {
+    padding: 8px !important;
+    float: right !important;
+    position: relative;
+    right: 1px;
+  }
+  .block-innernews {
+    > .section-newsdate {
+      position: relative !important;
+      top: 0 !important;
+      left: 0 !important;
+      bottom: 0 !important;
+      right: 0 !important;
+    }
+    padding: 4px !important;
+  }
+  .article-news {
+    padding: 0 !important;
+  }
+  .navigation-linknews {
+    margin-bottom: 10px;
+    left: 0 !important;
+  }
+  .main-containernav .inner-nav-link {
+    margin-top: 40px !important;
+  }
+  .main-wrapperpagging {
+    font-size: 12px !important;
+  }
+  /*=================== end of news ==================*/
+  /*=================== contact us  ==================*/
+  #contact > .map > .box_wrapp {
+    > .box_cont {
+      width: 100% !important;
+      height: auto !important;
+    }
+    height: auto !important;
+    padding: 0 8px !important;
+    border: none !important;
+    float: none !important;
+    width: 100% !important;
+  }
+  .main-contact {
+    width: 100% !important;
+    padding: 23px 11px 0px 10px !important;
+    border: 0 !important;
+    margin: 0px 0px;
+  }
+  /*=================== end contact us  =============*/
+  /*===================== konsultasi ================*/
+  .main-rightconsultasi {
+    display: none !important;
+  }
+  .main-headingconsul h4 {
+    font-size: 15px !important;
+  }
+  .form-konsultasi {
+    width: 100% !important;
+    padding: 11px 11px 11px 11px !important;
+  }
+  textarea.form-control {
+    height: 100px !important;
+  }
+  /*================ end of konsultasi ============*/
+  /*================ about us =====================*/
+  .konsep-pendidikan-container h3 {
+    text-align: center !important;
+  }
+  .resize-imgabout, .image-responsive {
+    display: block;
+    max-width: 100% !important;
+    max-height: 100% !important;
+  }
+  .main-artic.main-visi-misi {
+    margin-top: 10px !important;
+  }
+  .box-vision {
+    font-size: 14px !important;
+  }
+  .inner-visioncontainer-visimisi, .inner-visioncontainer-tujuan {
+    padding: 8px 8px 8px !important;
+  }
+  /*================ end of about us =============*/
+  /*========== career ===========*/
+  .wrapper-carerralrahma .block-innercareer {}
+  .career-dateandtime {
+    font-size: 12px !important;
+  }
+  img.career-viewstyle {
+    float: none !important;
+  }
+  /*============== footer mobile =================*/
+  footer {
+    height: auto !important;
+    .main-innerfooter {
+      font-size: 13px !important;
+      color: #000;
+      background: #f7f4ee;
+      padding: 20px 0 10px 0;
+      width: 100%;
+      display: inline-block;
+      height: 83px !important;
+    }
+  }
+  .main-innerfooter, #nav-footer, .li-nav-alrahma {
+    position: relative !important;
+    margin: 0 auto !important;
+    text-align: center;
+  }
+  /*================ footer mobile =================*/
 }
