repairing theme and maintance

--- a/css/theme/css/layout.css
+++ b/css/theme/css/layout.css
@@ -3,6 +3,15 @@
     Version      : V.1.0
     Development  : Alramha Presscholl And Kindergarten
 --------------------------------------------------------*/
+/* #Font Face
+
+=============================================== */
+@font-face {
+  font-family: 'junctionbold';
+  src: url("junction-bold-webfont.woff2") format("woff2"), url("junction-bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
 /* #Site Header
 ================================================ */
 header {
@@ -25,7 +34,7 @@ header {
 /*-------------------
     nav-bar header
 ---------------------*/
-.navbar-default {
+nav.navbar-default {
   background: #13a8dd -moz-linear-gradient(top, rgba(0, 18, 228, 0.2) 0%, rgba(0, 37, 171, 0.61) 100%);
   background: #13a8dd -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(255, 255, 255, 0.2)), color-stop(100%, rgba(0, 0, 0, 0.2)));
   background: #13a8dd -webkit-linear-gradient(top, rgba(0, 18, 228, 0.2) 0%, rgba(0, 37, 171, 0.61) 100%);
@@ -36,10 +45,10 @@ header {
   border-radius: 0px;
   text-transform: uppercase;
 }
-.navbar-default .navbar-nav > li > a {
+nav.navbar-default .navbar-nav > li > a {
   color: #fff;
 }
-.navbar-default .navbar-nav > li > a:hover {
+nav.navbar-default .navbar-nav > li > a:hover {
   color: #faa801;
 }
 
@@ -58,7 +67,7 @@ header {
 }
 
 .main-container {
-  background: #fff url(../img/pattern.png) center 1px repeat-x;
+  background: #fff url(../../../img/pattern.png) center 1px repeat-x;
   border-bottom: 1px solid #e6e6e6;
   border-top: 1px solid #e6e6e6;
   display: block;
@@ -129,7 +138,7 @@ footer {
 }
 
 ul#nav-footer li {
-  background: url(../img/menu_footer_divider.png) left center no-repeat;
+  background: url(../../../img/menu_footer_divider.png) left center no-repeat;
   float: left;
   margin-right: 10px;
   padding-left: 10px;
@@ -176,12 +185,12 @@ ul#nav-footer li:first-child {
 }
 
 #prevslide {
-  background: url("../img/back.png");
+  background: url("../../../img/back.png");
   left: 10px;
 }
 
 #nextslide {
-  background: url("../img/forward.png");
+  background: url("../../../img/forward.png");
   right: 10px;
 }
 
@@ -337,10 +346,10 @@ span.required {
   left: -35px;
 }
 .blog-carousel .slick-prev:before {
-  background: url(../img/carousel-left.png) 0 0 no-repeat;
+  background: url(../../../img/carousel-left.png) 0 0 no-repeat;
 }
 .blog-carousel .slick-next:before {
-  background: url(../img/carousel-right.png) 0 0 no-repeat;
+  background: url(../../../img/carousel-right.png) 0 0 no-repeat;
 }
 
 .home-blog .wrapper {
@@ -628,7 +637,7 @@ img.box-imagenewsdetail {
 }
 
 span.number1 {
-  background: url(../img/number1.png) no-repeat;
+  background: url(../../../img/number1.png) no-repeat;
   width: 50px;
   height: 50px;
   display: inline-block;
@@ -637,7 +646,7 @@ span.number1 {
   left: 39px;
 }
 span.number2 {
-  background: url(../img/number2.png) no-repeat;
+  background: url(../../../img/number2.png) no-repeat;
   width: 50px;
   height: 50px;
   display: inline-block;
@@ -646,7 +655,7 @@ span.number2 {
   left: 48px;
 }
 span.number3 {
-  background: url(../img/number3.png) no-repeat;
+  background: url(../../../img/number3.png) no-repeat;
   width: 50px;
   height: 50px;
   display: inline-block;
@@ -656,16 +665,16 @@ span.number3 {
 }
 
 div.icon-formulir {
-  background: url(../img/formulir.png) no-repeat;
+  background: url(../../../img/formulir.png) no-repeat;
 }
 div.icon-boxproses {
-  background: url(../img/box-proggres.png) no-repeat;
+  background: url(../../../img/box-proggres.png) no-repeat;
   position: relative;
   top: 3px;
   left: 9px;
 }
 div.icon-chats {
-  background: url(../img/chats.png) no-repeat;
+  background: url(../../../img/chats.png) no-repeat;
   position: relative;
   top: 17px;
   left: 15px;
@@ -775,21 +784,6 @@ li.nav-li-event {
   padding: 0px 16px 20px;
 }
 
-/*.btn {
-    display: inline-block;
-    padding: 5px 10px;
-    font-size: 14px;
-    color: #fff !important;
-    border: 2px solid #4d92d9;
-    background-color: #4d92d9;
-    text-decoration: none;
-    transition: 0.4s;
-}
-.btn:hover {
-    background-color: transparent;
-    color: #4d92d9 !important;
-    transition: 0.4s;
-}*/
 .text-desc {
   position: absolute;
   left: 0;
@@ -937,7 +931,7 @@ span.required {
 }
 
 .user-images {
-  background-image: url(../img/user.png);
+  background-image: url(../../../img/user.png);
   background-repeat: no-repeat;
   display: block;
   width: 300px;
