update sass file and add font generator

--- a/css/theme/sass/_color.scss
+++ b/css/theme/sass/_color.scss
@@ -1,6 +1,26 @@
-//Base Color
+//base Color
 $primary_color 	 :#fff;
 $secondary_color :#000;
+$third_color	 :#f7f7f7;
+$fourtd_color	 :#f7f4ee;
+$foot_color		 :#d1d1d1; 
 
-//Current Hover Active
+//border grey
+$grey_border	:#d7d7d7;
+$grey_mixies	:#e6e6e6;
+$grey_medium	:#b1b1b1;
+$grey_darkest	:#7d7d7d;
+
+
+//warning
+$danger_color 	:#d80000;
+
+//current border
+$brown-shocked	:#c1850c;
+
+//current hover active
 $pumpkin_yellow  :#faa801;
+$darkest_black	 :#000;
+
+//container wrapper-containertopbase
+$blues_skyhigh   :#0b72cf;
