--- a/css/theme/sass/layout.scss
+++ b/css/theme/sass/layout.scss
@@ -20,27 +20,42 @@
 }
 @font-face {
     font-family: 'junctionlight';
-    src: url('junction-light-webfont.woff2') format('woff2'),
-         url('junction-light-webfont.woff') format('woff');
+    src: url('../../../asset/font/junction-light-webfont.woff2') format('woff2'),
+         url('../../../asset/font/junction-light-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 
 }
 @font-face {
     font-family: 'junctionregular';
-    src: url('junction-regular-webfont.woff2') format('woff2'),
-         url('junction-regular-webfont.woff') format('woff');
+    src: url('../../../asset/font/junction-regular-webfont.woff2') format('woff2'),
+         url('../../../asset/font/junction-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 /* #Site Header
 ================================================ */
-header.site-headers {
-  .main-topupper-head{
+header .site-headers{
+  margin:0;
+  padding:0;
+}
+
+header .site-headers {
+  .container-header{
     font-family: junctionbold;
   }
 }
+
+header .site-headers {
+  .container-header{
+    h5.third-title{
+      font-family: junctionregular;
+    }    
+  }
+}
+
+
 /*-------------------
     nav-bar header
 ---------------------*/
@@ -134,6 +149,13 @@ footer {
   height: 60px;
 }
 
+footer .container{
+  .main-innerfooter{
+    font-family: junctionbold;
+    @include font-size(14px);
+  }
+}
+
 .main-innerfooter {
   position: absolute;
   margin-left: 100px;
@@ -171,20 +193,18 @@ ul#nav-footer li {
 
 #slidecaption {
   background: $primary_color;
-  bottom: 2%;
-  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
   @include font-size(12px);
+  bottom: 2%;
   line-height: 16px;
-  -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
   padding: 15px;
   position: absolute;
   right: 1%;
   text-align: right;
-  -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
+  @include box-shadow(0, 1px, 5px, rgba(0, 0, 0, 0.5));
   span {
-    color: #999;
+    color: $brown-shocked;
     display: block;
-    font-size: 0.50em;
+    @include font-size(12px);
     margin-top: 10px;
   }
 }
@@ -217,14 +237,12 @@ ul#nav-footer li {
 }
 
 #banner_home {
-  background: #fff;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
-  -moz-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
+  background: $primary_color;
   position: relative;
   top: -27px;
-  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.3);
   margin-bottom: 20px;
   margin-top: 346px;
+  @include box-shadow(0, 1px, 3px, rgba(0, 0, 0, 0.3));
 }
 
 /* 2. PAGES AND CONTENT */
@@ -943,7 +961,6 @@ span.required {
 }
 
 /*================SECTION CONTAINER FOOTER=======================*/
-
 .section {
   display: block;
   width: 100%;
